add discord wiget

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
     </div>
   </div>
 
+  <aside>
+    <iframe src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="350" height="500"
+      allowtransparency="true" frameborder="0"
+      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  </aside>
+
   <main>
     <div class="block">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam mollis
