--- a/regeln.html
+++ b/regeln.html
@@ -18,31 +18,43 @@
                 style="color: #ff4400">n</span><span style="color:#ff5500">g</span> <span
                 style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
                 style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
-                style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span> <span
-                style="color: #ffcc00">N</span><span style="color: #ffdd00">e</span><span
-                style="color: #ffee00">t</span><span style="color: #ffff00">z</span><span
-                style="color: #ffee00">w</span><span style="color: #ffdd00">e</span><span
-                style="color: #ffcc00">r</span><span style="color: #ffbb00">k</span></a>
-        <a class="logo"><img src="assests/icon/gl.png" alt="logo"></a>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="regeln.html">Regeln</a>
-        <p class="menu cta">Navigation</p>
+                style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
+            <a class="logo"><img src="assests/icon/gl.png" alt="logo"></a>
+            <nav>
+                <ul class="nav__links">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="regeln.html">Regeln</a>
+            <p class="menu cta">Navigation</p>
     </header>
 
     <div id="mobile__menu" class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
             <a href="index.html">Home</a>
-            <a href="regeln.html">Regeln</a>
+            <a class="active" href="regeln.html">Regeln</a>
         </div>
     </div>
 
     <main>
-
+        <div class="block">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
+                mollis
+                himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
+                Lobortis
+                suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
+                fermentum
+                lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
+                consectetur.
+                Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
+                mollis
+                lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
+                vestibulum
+                ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
+                potenti
+                habitasse consequat porttitor dolor.</p>
+        </div>
     </main>
 
     <script type="text/javascript" src="scripts/mobile.js"></script>
