--- a/index.html
+++ b/index.html
@@ -2,61 +2,77 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 
-  <title>Gaming Lounge</title>
+    <title>Gaming Lounge</title>
 </head>
 
 <body>
-  <header>
-    <a class="logo-name"><span style="color: #ff0000; ">G</span><span style="color: #ff1100">a</span><span
-        style="color: #ff2200">m</span><span style="color: #ff3300">i</span><span style="color: #ff4400">n</span><span
-        style="color:#ff5500">g</span> <span style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
-        style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span style="color: #ffaa00">g</span><span
-        style="color: #ffbb00">e</span> <span style="color: #ffcc00">N</span><span style="color: #ffdd00">e</span><span
-        style="color: #ffee00">t</span><span style="color: #ffff00">z</span><span style="color: #ffee00">w</span><span
-        style="color: #ffdd00">e</span><span style="color: #ffcc00">r</span><span style="color: #ffbb00">k</span></a>
-    <a class="logo"><img src="assests/icon/gl.png" alt="logo"></a>
-    <nav>
-      <ul class="nav__links">
-        <li><a href="index.html">Home</a></li>
-      </ul>
-    </nav>
-    <a class="cta" href="regeln.html">Regeln</a>
-    <p class="menu cta">Navigation</p>
-  </header>
+    <header>
+        <a class="logo-name"><span style="color: #ff0000; ">G</span><span style="color: #ff1100">a</span><span
+                style="color: #ff2200">m</span><span style="color: #ff3300">i</span><span
+                style="color: #ff4400">n</span><span style="color:#ff5500">g</span> <span
+                style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
+                style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
+                style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
+            <a class="logo"><img src="assests/icon/gl.png" alt="logo"></a>
+            <nav>
+                <ul class="nav__links">
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="regeln.html">Regeln</a>
+            <p class="menu cta">Navigation</p>
+    </header>
 
-  <div id="mobile__menu" class="overlay">
-    <a class="close">&times;</a>
-    <div class="overlay__content">
-      <a href="index.html">Home</a>
-      <a href="regeln.html">Regeln</a>
+    <div id="mobile__menu" class="overlay">
+        <a class="close">&times;</a>
+        <div class="overlay__content">
+            <a class="active" href="index.html">Home</a>
+            <a href="regeln.html">Regeln</a>
+        </div>
     </div>
-  </div>
 
-  <aside>
-    <iframe src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="350" height="500"
-      allowtransparency="true" frameborder="0"
-      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-  </aside>
+    <main>
 
-  <main>
-    <div class="block">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam mollis
-        himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor. Lobortis
-        suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus fermentum
-        lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus consectetur.
-        Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia mollis
-        lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At vestibulum
-        ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a potenti
-        habitasse consequat porttitor dolor.</p>
-    </div>
-  </main>
-  <script type="text/javascript" src="scripts/mobile.js"></script>
+        <div style="margin-bottom: 3%; display: flex;">
+            <iframe style="margin: 0 auto; display: block;"
+                src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="325" height="450"
+                allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+            </iframe>
+
+            <!-- Other staatistics there, double just for css -->
+            <iframe style="margin: 0 auto; display: block;"
+                src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="325" height="450"
+                allowtransparency="true" frameborder="0"
+                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+            </iframe>
+        </div>
+
+        <div class="block">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
+                mollis
+                himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
+                Lobortis
+                suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
+                fermentum
+                lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
+                consectetur.
+                Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
+                mollis
+                lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
+                vestibulum
+                ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
+                potenti
+                habitasse consequat porttitor dolor.</p>
+        </div>
+    </main>
+    <script type="text/javascript" src="scripts/mobile.js"></script>
 </body>
 
 </html>
