--- a/regeln.html
+++ b/regeln.html
@@ -19,7 +19,7 @@
                 style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
                 style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                 style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
-            <a class="logo"><img src="assests/icon/gl.png" alt="logo"></a>
+            <a class="logo"><img src="assests/icon/gaminglounge-64x64.png" alt="logo"></a>
             <nav>
                 <ul class="nav__links">
                     <li><a href="index.html">Home</a></li>
