--- a/index.html
+++ b/index.html
@@ -37,24 +37,7 @@
         </div>
     </div>
 
-    <main>
-
-        <div style="margin-bottom: 3%; display: flex;">
-            <iframe style="margin: 0 auto; display: block;"
-                src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="325" height="450"
-                allowtransparency="true" frameborder="0"
-                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-            </iframe>
-
-            <!-- Other staatistics there, double just for css -->
-            <iframe style="margin: 0 auto; display: block;"
-                src="https://discord.com/widget?id=1138199615141855232&theme=dark" width="325" height="450"
-                allowtransparency="true" frameborder="0"
-                sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-            </iframe>
-        </div>
-
-        <div class="block">
+        <div class="full-block right">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
                 mollis
                 himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
@@ -71,7 +54,25 @@
                 potenti
                 habitasse consequat porttitor dolor.</p>
         </div>
-    </main>
+
+        <div class="full-block left">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
+                mollis
+                himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
+                Lobortis
+                suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
+                fermentum
+                lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
+                consectetur.
+                Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
+                mollis
+                lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
+                vestibulum
+                ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
+                potenti
+                habitasse consequat porttitor dolor.</p>
+        </div>
+
     <script type="text/javascript" src="scripts/mobile.js"></script>
 </body>
 
