--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-        <div class="full-block right">
+        <div class="full-block right" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.85)), url(https://thumbs.dreamstime.com/b/twisted-woodland-scenery-resembling-minecraft-landscape-ai-generative-design-background-instagram-facebook-wall-painting-329315903.jpg);">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
                 mollis
                 himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
