add minecraft on main and fix scaling

--- a/index.html
+++ b/index.html
@@ -37,41 +37,51 @@
         </div>
     </div>
 
-        <div class="full-block right" style="background: linear-gradient(90deg, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.85)), url(https://thumbs.dreamstime.com/b/twisted-woodland-scenery-resembling-minecraft-landscape-ai-generative-design-background-instagram-facebook-wall-painting-329315903.jpg);">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
-                mollis
-                himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
-                Lobortis
-                suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
-                fermentum
-                lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
-                consectetur.
-                Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
-                mollis
-                lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
-                vestibulum
-                ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
-                potenti
-                habitasse consequat porttitor dolor.</p>
-        </div>
+    <div style="text-align: center; margin-top: 25px; margin-bottom: 250px;">
+        <h1 style="text-decoration: underline;">About Us</h1>
+    </div>
 
-        <div class="full-block left">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
-                mollis
-                himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
-                Lobortis
-                suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
-                fermentum
-                lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
-                consectetur.
-                Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
-                mollis
-                lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
-                vestibulum
-                ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
-                potenti
-                habitasse consequat porttitor dolor.</p>
-        </div>
+    <div class="full-block right minecraft">
+        <h1>Minecraft: Endless</h1><br>
+        <h3>IP: GamingLounge.me</h2><br>
+            <h3>Version: 1.21.4</h3><br>
+            <h4>Join Endless</h2>
+                <p>Right click NPC "Endless" in the lobby or issue /server Endless2 to join the server.</p><br>
+                <h4>Usefull Commands</h4>
+                <ol style="list-style: circle; list-style-position: inside;">
+                    <li>/clan</li>
+                    <li>/pad</li>
+                    <li>/claim</li>
+                    <li>/teamclaim</li>
+                    <li>/tpa</li>
+                    <li>/rtp</li>
+                </ol><br>
+                <h4>Usefull items (Found in Recepie book)</h4>
+                <ol style="list-style: circle; list-style-position: inside;">
+                    <li>Portable-Workbench/Enderchest/Grindstone/Stonecutter/Smithingtable</li>
+                    <li style="padding-left: 2.5%;">The item is not renamed, just the vanilla item but enchanted</li>
+                    <li>Telepaad</li>
+                </ol>
+                <button>more information</button>
+    </div>
+
+    <div class="full-block left">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
+            mollis
+            himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
+            Lobortis
+            suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
+            fermentum
+            lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
+            consectetur.
+            Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
+            mollis
+            lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
+            vestibulum
+            ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
+            potenti
+            habitasse consequat porttitor dolor.</p>
+    </div>
 
     <script type="text/javascript" src="scripts/mobile.js"></script>
 </body>
