fix background shadow

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ol style="list-style: circle; list-style-position: inside;">
                     <li>Portable-Workbench/Enderchest/Grindstone/Stonecutter/Smithingtable</li>
                     <li style="padding-left: 2.5%;">The item is not renamed, just the vanilla item but enchanted</li>
-                    <li>Telepaad</li>
+                    <li>Telepad</li>
                 </ol>
                 <button>more information</button>
     </div>
