add hyperlinks to telepad and portableinventories

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 </ol><br>
                 <h4>Usefull items (Found in Recepie book)</h4>
                 <ol style="list-style: circle; list-style-position: inside;">
-                    <li>Portable-Workbench/Enderchest/Grindstone/Stonecutter/Smithingtable</li>
+                    <li><a href="https://github.com/GamingLounge-me/PortableInventories" class="hyperlink">PortableInventories</a> - Portable-Workbench/Enderchest/Grindstone/Stonecutter/Smithingtable</li>
                     <li style="padding-left: 2.5%;">The item is not renamed, just the vanilla item but enchanted</li>
-                    <li>Telepad</li>
+                    <li><a href="https://github.com/GamingLounge-me/telepads" class="hyperlink">Telepad</a></li>
                 </ol>
                 <button>more information</button>
     </div>
