--- a/index.html
+++ b/index.html
@@ -32,55 +32,72 @@
     <div id="mobile__menu" class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-            <a class="active" href="index.html">Home</a>
-            <a href="regeln.html">Regeln</a>
+            <a href="index.html">Home</a>
+            <a class="active" href="regeln.html">Regeln</a>
         </div>
     </div>
 
     <div style="text-align: center; margin-top: 25px; margin-bottom: 250px;">
-        <h1 style="text-decoration: underline;">About Us</h1>
+        <h1><a name="aboutus" href="#aboutus">About Us</a></h1>
     </div>
 
     <div class="full-block right minecraft">
-        <h1>Minecraft: Endless</h1><br>
+        <h1><a name="endless" href="#endless" style="text-decoration: none;">Minecraft: Endless</a></h1><br>
         <h3>IP: GamingLounge.me</h2><br>
             <h3>Version: 1.21.4</h3><br>
             <h4>Join Endless</h2>
                 <p>Right click NPC "Endless" in the lobby or issue /server Endless2 to join the server.</p><br>
                 <h4>Usefull Commands</h4>
-                <ol style="list-style: circle; list-style-position: inside;">
+                <ul>
                     <li>/clan</li>
                     <li>/pad</li>
                     <li>/claim</li>
                     <li>/teamclaim</li>
                     <li>/tpa</li>
                     <li>/rtp</li>
-                </ol><br>
+                </ul><br>
                 <h4>Usefull items (Found in Recepie book)</h4>
-                <ol style="list-style: circle; list-style-position: inside;">
-                    <li><a href="https://github.com/GamingLounge-me/PortableInventories" class="hyperlink">PortableInventories</a> - Portable-Workbench/Enderchest/Grindstone/Stonecutter/Smithingtable</li>
-                    <li style="padding-left: 2.5%;">The item is not renamed, just the vanilla item but enchanted</li>
-                    <li><a href="https://github.com/GamingLounge-me/telepads" class="hyperlink">Telepad</a></li>
-                </ol>
+                <ul>
+                    <li><a href="https://github.com/GamingLounge-me/PortableInventories" >PortableInventories</a>
+                        <ul>
+                            <li>Portable- Workbench / Enderchest / Grindstone / Stonecutter / Smithingtable</li>
+                            <li>The item is not renamed, just the vanilla item but enchanted</li>
+                        </ul>
+                    </li>
+                    <li><a href="https://github.com/GamingLounge-me/telepads" >Telepad</a></li>
+                </ul>
                 <button>more information</button>
     </div>
 
-    <div class="full-block left">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Malesuada ac diam suspendisse tincidunt quam
-            mollis
-            himenaeos vitae erat. Per platea nec bibendum pretium magnis purus imperdiet suspendisse tempor.
-            Lobortis
-            suscipit ante eleifend eget malesuada est nec non lectus. Purus ac tortor aptent mattis dapibus
-            fermentum
-            lobortis montes sit. Sed adipiscing congue fringilla sodales hendrerit nisl hendrerit lectus
-            consectetur.
-            Dignissim duis dictum gravida non dignissim hac suscipit nec congue. Euismod et velit egestas lacinia
-            mollis
-            lorem orci facilisi nunc. Nisl curae ac hendrerit bibendum id imperdiet a sollicitudin sociosqu. At
-            vestibulum
-            ipsum commodo metus aliquam habitasse magnis suspendisse suspendisse. Volutpat nisl mauris aliquet a
-            potenti
-            habitasse consequat porttitor dolor.</p>
+    <div class="full-block left coding">
+        <h1><a name="coding" href="#coding" style="text-decoration: none;">Coding</a></h1><br>
+        <h3>Java</h3><br>
+        <h5>API</h5>
+        <ul>
+            <li><a href="https://github.com/GamingLounge-me/ConfigAPI" >ConfigAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/GuiAPI" >GuiAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/PlayerInputAPI" >PlayerInputAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/ItemBuilder" >ItemBuilder</a></li>
+        </ul><br>
+        <h5>Plugins</h5>
+        <ul>
+
+        </ul><br>
+        <h3>HTML/CSS/JavaScript</h3>
+        <ul>
+            <li><a href="https://github.com/GamingLounge-me/GamingLoungeHomePage" >This Website</a></li>
+        </ul>
+    </div>
+
+    <div style="text-align: center; margin-top: 25px; margin-bottom: 250px;">
+        <h1><a name="contact" href="#contact">Contact</a></h1><br>
+        <p>E-Mail: info@gaminglounge.me</p><br>
+        <div class="social-media">
+            <a><img src="assests/icon/youtube.png" alt="Youtube" ></a>
+            <a><img src="assests/icon/tiktok.png" alt="TikTok"></a>
+            <a><img src="assests/icon/instagram.png" alt="Instragram"></a>
+            <a><img src="assests/icon/discord.png" alt="Discord"></a>
+        </div>
     </div>
 
     <script type="text/javascript" src="scripts/mobile.js"></script>
