--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                 </ul><br>
                 <h4>Usefull items (Found in Recepie book)</h4>
                 <ul>
-                    <li><a href="https://github.com/GamingLounge-me/PortableInventories" >PortableInventories</a>
+                    <li><a href="https://github.com/GamingLounge-me/PortableInventories" target="_blank">PortableInventories</a>
                         <ul>
                             <li>Portable- Workbench / Enderchest / Grindstone / Stonecutter / Smithingtable</li>
                             <li>The item is not renamed, just the vanilla item but enchanted</li>
                         </ul>
                     </li>
-                    <li><a href="https://github.com/GamingLounge-me/telepads" >Telepad</a></li>
+                    <li><a href="https://github.com/GamingLounge-me/telepads" target="_blank">Telepad</a></li>
                 </ul>
                 <button>more information</button>
     </div>
@@ -72,10 +72,10 @@
         <h3>Java</h3><br>
         <h5>API</h5>
         <ul>
-            <li><a href="https://github.com/GamingLounge-me/ConfigAPI" >ConfigAPI</a></li>
-            <li><a href="https://github.com/GamingLounge-me/GuiAPI" >GuiAPI</a></li>
-            <li><a href="https://github.com/GamingLounge-me/PlayerInputAPI" >PlayerInputAPI</a></li>
-            <li><a href="https://github.com/GamingLounge-me/ItemBuilder" >ItemBuilder</a></li>
+            <li><a href="https://github.com/GamingLounge-me/ConfigAPI" target="_blank">ConfigAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/GuiAPI" target="_blank">GuiAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/PlayerInputAPI" target="_blank">PlayerInputAPI</a></li>
+            <li><a href="https://github.com/GamingLounge-me/ItemBuilder" target="_blank">ItemBuilder</a></li>
         </ul><br>
         <h5>Plugins</h5>
         <ul>
@@ -83,7 +83,7 @@
         </ul><br>
         <h3>HTML/CSS/JavaScript</h3>
         <ul>
-            <li><a href="https://github.com/GamingLounge-me/GamingLoungeHomePage" >This Website</a></li>
+            <li><a href="https://github.com/GamingLounge-me/GamingLoungeHomePage" target="_blank">This Website</a></li>
         </ul>
     </div>
 
@@ -91,13 +91,13 @@
         <h1><a name="contact" href="#contact">Contact</a></h1><br>
         <p>E-Mail: info@gaminglounge.me</p><br>
         <div class="social-media">
-            <a><svg viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg" style="fill: red">
+            <a href="https://youtube.gaminglounge.me/" target="_blank"><svg viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg" style="fill: red">
                 <path d="M549.655 124.083c-6.281-23.65-24.787-42.276-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.322-42.003 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.281 23.65 24.787 41.5 48.284 47.821C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.321 42.003-24.171 48.284-47.821 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zm-317.51 213.508V175.185l142.739 81.205-142.739 81.201z"></path>
             </svg></a>
-            <a><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill: black;">
+            <a href="https://tiktok.gaminglounge.me/" target="_blank"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill: black;">
                 <path d="M19.589 6.686a4.793 4.793 0 0 1-3.77-4.245V2h-3.445v13.672a2.896 2.896 0 0 1-5.201 1.743l-.002-.001.002.001a2.895 2.895 0 0 1 3.183-4.51v-3.5a6.329 6.329 0 0 0-5.394 10.692 6.33 6.33 0 0 0 10.857-4.424V8.687a8.182 8.182 0 0 0 4.773 1.526V6.79a4.831 4.831 0 0 1-1.003-.104z"/>
             </svg></a>
-            <a><svg viewBox="0 0 455.73 455.73" xmlns="http://www.w3.org/2000/svg" style="fill: #F58529; border-radius: 25%;">
+            <!--<a href="https://instagram.gaminglounge.me/" target="_blank"><svg viewBox="0 0 455.73 455.73" xmlns="http://www.w3.org/2000/svg" style="fill: #F58529; border-radius: 25%;">
             <path d="M227.86,182.55c-24.98,0-45.32,20.33-45.32,45.31c0,24.99,20.34,45.33,45.32,45.33c24.99,0,45.32-20.34,45.32-45.33 
                C273.18,202.88,252.85,182.55,227.86,182.55z M227.86,182.55c-24.98,0-45.32,20.33-45.32,45.31c0,24.99,20.34,45.33,45.32,45.33
                c24.99,0,45.32-20.34,45.32-45.33C273.18,202.88,252.85,182.55,227.86,182.55z M303.36,108.66H152.37
@@ -134,11 +134,11 @@
                c43.28,0,78.49,35.21,78.49,78.48C306.35,271.14,271.14,306.35,227.86,306.35z M308.87,165.61c-10.24,0-18.57-8.33-18.57-18.57
                s8.33-18.57,18.57-18.57s18.57,8.33,18.57,18.57S319.11,165.61,308.87,165.61z M227.86,182.55c-24.98,0-45.32,20.33-45.32,45.31
                c0,24.99,20.34,45.33,45.32,45.33c24.99,0,45.32-20.34,45.32-45.33C273.18,202.88,252.85,182.55,227.86,182.55z"/>
-           </svg></a>
-            <a><svg viewBox="0 -28.5 256 256" xmlns="http://www.w3.org/2000/svg">
+           </svg></a>-->
+            <a href="https://discord.gaminglounge.me/" target="_blank"><svg viewBox="0 -28.5 256 256" xmlns="http://www.w3.org/2000/svg">
                 <g><path d="M216.856339,16.5966031 C200.285002,8.84328665 182.566144,3.2084988 164.041564,0 C161.766523,4.11318106 159.108624,9.64549908 157.276099,14.0464379 C137.583995,11.0849896 118.072967,11.0849896 98.7430163,14.0464379 C96.9108417,9.64549908 94.1925838,4.11318106 91.8971895,0 C73.3526068,3.2084988 55.6133949,8.86399117 39.0420583,16.6376612 C5.61752293,67.146514 -3.4433191,116.400813 1.08711069,164.955721 C23.2560196,181.510915 44.7403634,191.567697 65.8621325,198.148576 C71.0772151,190.971126 75.7283628,183.341335 79.7352139,175.300261 C72.104019,172.400575 64.7949724,168.822202 57.8887866,164.667963 C59.7209612,163.310589 61.5131304,161.891452 63.2445898,160.431257 C105.36741,180.133187 151.134928,180.133187 192.754523,160.431257 C194.506336,161.891452 196.298154,163.310589 198.110326,164.667963 C191.183787,168.842556 183.854737,172.420929 176.223542,175.320965 C180.230393,183.341335 184.861538,190.991831 190.096624,198.16893 C211.238746,191.588051 232.743023,181.531619 254.911949,164.955721 C260.227747,108.668201 245.831087,59.8662432 216.856339,16.5966031 Z M85.4738752,135.09489 C72.8290281,135.09489 62.4592217,123.290155 62.4592217,108.914901 C62.4592217,94.5396472 72.607595,82.7145587 85.4738752,82.7145587 C98.3405064,82.7145587 108.709962,94.5189427 108.488529,108.914901 C108.508531,123.290155 98.3405064,135.09489 85.4738752,135.09489 Z M170.525237,135.09489 C157.88039,135.09489 147.510584,123.290155 147.510584,108.914901 C147.510584,94.5396472 157.658606,82.7145587 170.525237,82.7145587 C183.391518,82.7145587 193.761324,94.5189427 193.539891,108.914901 C193.539891,123.290155 183.391518,135.09489 170.525237,135.09489 Z" fill="#5865F2" fill-rule="nonzero"></path></g>
             </svg></a>
-            <a><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill: #24292f;">
+            <a href="https://github.gaminglounge.me/" target="_blank"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" style="fill: #24292f;">
                 <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                 </svg></a>
         </div>
