add level to telepad

--- a/endless.html
+++ b/endless.html
@@ -38,6 +38,12 @@
                 <li>Inside the Telepads interface you can manage the destination where to get teleported if you walk over the beacon.</li>
                 <li>If the Telepad is on Level two or higher you can teleport there via /pad</li>
             </ul><br>
+            <h3>Level</h3><br>
+            <h5>Level: 2</h5>
+            <ul>
+                <li>Telepad can be set public</li>
+                <li>Telepad is visible in /pad</li>
+            </ul><br>
             <h3>Obtaining</h3>
             <p>The telepad can be obtained via a crafting recepie whioch need:</p>
             <ul>
