fix: mobile nav and img display

--- a/endless.html
+++ b/endless.html
@@ -20,6 +20,7 @@
                     style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                     style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
             <a class="cta" href="index.html#endless">Back</a>
+            <a class="menu cta" href="index.html#endless">Back</a>
         </header>
 
         <div class="full-block right telepad1">
@@ -51,7 +52,7 @@
                 <li>1x Ender eye</li>
                 <li>3x Obsidian</li>
                 <li>4x Glass</li>
-                <li style="list-style-type: none; max-width: 50%; height: auto;"><img src="assests/images/telepad-crafting.png"></li>
+                <li style="list-style-type: none;"><img src="assests/images/telepad-crafting.png" alt="Telepad crafting"></li>
             </ul>
             <br>
 
