--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     <li><a href="https://github.com/GamingLounge-me/telepads" target="_blank">Telepad</a></li>
                 </ul>
                 <button><a href="endless.html">more information</a></button>
+                <button><a href="https://map.gaminglounge.me/minecraft/endless/" target="_blank">Map</a></button>
     </div>
 
     <div class="full-block left coding">
