add a tag for telepad

--- a/endless.html
+++ b/endless.html
@@ -24,7 +24,7 @@
         </header>
 
         <div class="full-block right telepad1">
-            <h1>Telepad</h1>
+            <h1><a href="#telepad" name="telepad">Telepad</a></h1>
             <p>With the telepad you can teleport to different other telepads aacross the worlds of the server.</p>
             <p>The Telepad is an multi block structure of 3x3 with an beacon in the middel.</p><br>
             <h3>Cosmetic</h3>
