--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a class="close">&times;</a>
         <div class="overlay__content">
             <a href="index.html">Home</a>
-            <a class="active" href="regeln.html">Regeln</a>
+            <a href="regeln.html">Regeln</a>
         </div>
     </div>
 
@@ -64,7 +64,7 @@
                     </li>
                     <li><a href="https://github.com/GamingLounge-me/telepads" target="_blank">Telepad</a></li>
                 </ul>
-                <button><a href="endless.html">more information</a></button>
+                <button><a href="minecraft/endless.html">more information</a></button>
                 <button><a href="https://map.gaminglounge.me/minecraft/endless/" target="_blank">Map</a></button>
     </div>
 
