--- a/regeln.html
+++ b/regeln.html
@@ -31,7 +31,7 @@
         <a class="close">&times;</a>
         <div class="overlay__content">
             <a href="index.html">Home</a>
-            <a class="active" href="regeln.html">Regeln</a>
+            <a href="regeln.html">Regeln</a>
         </div>
     </div>
 
