--- a/minecraft/hypixel/arcade/zombies/alien_arcadium.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium.html
@@ -36,10 +36,7 @@
                 <br<h3>Reviving</h3>
                 <p>After being revived you need to press shift again, if you dont you wont revive anyone.</p>
                 <br><h3>Boosts</h3>
-                <ul>
-                    <li>insta kill -> Dont take it.</li>
-                    <li>Shoping Spree -> If the roller coaster isn't open dont take it maybe you will have enought before it despawns.</li>
-                </ul>
+                <p>insta kill -> Dont take it.</p>
             </div>
 
             <div class="block">
