--- a/minecraft/hypixel/arcade/zombies/alien_arcadium.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium.html
@@ -31,7 +31,7 @@
                 <p>Only open Lucky Chests during Shoping Spree</p><br>
                 <p>Shping Spree spawn every 10 rounds.</p>
                 <br><h3>Eco-Rounds</h3>
-                <p>Everyone sneek in an corner (lucky chest or upgrade maschine for example) and wait for slimes to grow,<br> while waiting block with the sword.</p>
+                <p>Everyone sneek in an corner (lucky chest or upgrade machine for example) and wait for slimes to grow,<br> while waiting block with the sword.</p>
                 <p>This could be also usefull at some other rounds with many zombies.</p>
                 <br<h3>Reviving</h3>
                 <p>After being revived you need to press shift again, if you dont you wont revive anyone.</p>
