--- a/minecraft/hypixel/arcade/zombies/alien_arcadium.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium.html
@@ -33,7 +33,7 @@
                 <br><h3>Eco-Rounds</h3>
                 <p>Everyone sneek in an corner (lucky chest or upgrade machine for example) and wait for slimes to grow,<br> while waiting block with the sword.</p>
                 <p>This could be also usefull at some other rounds with many zombies.</p>
-                <br<h3>Reviving</h3>
+                <br><h3>Reviving</h3>
                 <p>After being revived you need to press shift again, if you dont you wont revive anyone.</p>
                 <br><h3>Boosts</h3>
                 <p>insta kill -> Dont take it.</p>
