--- a/minecraft/hypixel/arcade/zombies/alien_arcadium.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium.html
@@ -175,7 +175,7 @@
                         <th>UFO is opening,<br>zombies from above.</th>
                         <th></th>
                         <th></th>
-                        <th>Yout can start,<br> open doors</th>
+                        <th>You can start,<br> open doors</th>
                     </tr>
                     <tr>
                         <th>11</th>
