--- a/minecraft/hypixel/arcade/zombies/index.html
+++ b/minecraft/hypixel/arcade/zombies/index.html
@@ -22,7 +22,7 @@
                 <ul class="nav__links">
                     <li><a href="../../../../index.html">Home</a></li>
                 </ul>
-                <a class="cta" href="../../../../regeln.html">Regeln</a>
+                <a class="cta" href="../../../../rules.html">Rules</a>
                 <p class="menu cta">Navigation</p>
         </header>
     
@@ -30,7 +30,7 @@
             <a class="close">&times;</a>
             <div class="overlay__content">
                 <a href="../../../../index.html">Home</a>
-                <a href="../../../../regeln.html">Regeln</a>
+                <a href="../../../../rules.html">Rules</a>
             </div>
         </div>
 
