change margins at block sites

--- a/minecraft/hypixel/arcade/zombies/alien_arcadium.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium.html
@@ -23,7 +23,7 @@
             <a class="menu cta" href="index.html#alien_arcadium">Back</a>
         </header>
 
-        <div style="margin: 2.5% 15% 5% 15%;">
+        <div class="blocksite">
 
             <div class="block">
                 <h1>Playstyle</h1>
