--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
                 style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                 style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
             <ul class="nav__links">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./">Home</a></li>
             </ul>
-            <a class="cta" href="rules.html">Rules</a>
+            <a class="cta" href="./rules/">Rules</a>
             <p class="menu cta">Navigation</p>
     </header>
 
     <div id="mobile__menu" class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-            <a href="index.html">Home</a>
-            <a href="rules.html">Rules</a>
+            <a href="./">Home</a>
+            <a href="./rules/">Rules</a>
         </div>
     </div>
 
