--- a/rules/index.html
+++ b/rules/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
 
     <title>Gaming Lounge</title>
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a class="logo"><img src="assests/icon/gaminglounge-64x64.png" alt="logo"></a>
+        <a class="logo"><img src="../assests/icon/gaminglounge-64x64.png" alt="logo"></a>
         <a class="logo-name"><span style="color: #ff0000; ">G</span><span style="color: #ff1100">a</span><span
                 style="color: #ff2200">m</span><span style="color: #ff3300">i</span><span
                 style="color: #ff4400">n</span><span style="color:#ff5500">g</span> <span
@@ -21,17 +21,17 @@
                 style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                 style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
             <ul class="nav__links">
-                <li><a href="./">Home</a></li>
+                <li><a href="../">Home</a></li>
             </ul>
-            <a class="cta" href="./rules/">Rules</a>
+            <a class="cta" href="./">Rules</a>
             <p class="menu cta">Navigation</p>
     </header>
 
     <div id="mobile__menu" class="overlay">
         <a class="close">&times;</a>
         <div class="overlay__content">
-            <a href="./">Home</a>
-            <a href="./rules/">Rules</a>
+            <a href="../">Home</a>
+            <a href="./">Rules</a>
         </div>
     </div>
 
