change endless headline

--- a/minecraft/endless/index.html
+++ b/minecraft/endless/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="../../styles.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
     
         <title>Gaming Lounge</title>
@@ -12,15 +12,15 @@
 
     <body>
         <header>
-            <a class="logo"><img src="../assests/icon/gaminglounge-64x64.png" alt="logo"></a>
+            <a class="logo"><img src="../../assests/icon/gaminglounge-64x64.png" alt="logo"></a>
             <a class="logo-name"><span style="color: #ff0000; ">G</span><span style="color: #ff1100">a</span><span
                     style="color: #ff2200">m</span><span style="color: #ff3300">i</span><span
                     style="color: #ff4400">n</span><span style="color:#ff5500">g</span> <span
                     style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
                     style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                     style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
-            <a class="cta" href="../index.html#endless">Back</a>
-            <a class="menu cta" href="../index.html#endless">Back</a>
+            <a class="cta" href="../../#endless">Back</a>
+            <a class="menu cta" href="../../#endless">Back</a>
         </header>
 
         <div class="full-block right telepad1">
@@ -52,12 +52,12 @@
                 <li>1x Ender eye</li>
                 <li>3x Obsidian</li>
                 <li>4x Glass</li>
-                <li style="list-style-type: none;"><img src="../assests/images/telepad-crafting.png" alt="Telepad crafting"></li>
+                <li style="list-style-type: none;"><img src="../../assests/images/telepad-crafting.png" alt="Telepad crafting"></li>
             </ul>
             <br>
 
             <div class="gallery">
-                <img src="../assests/images/telepad-gui1.png" alt="Telepad gui1">
+                <img src="../../assests/images/telepad-gui1.png" alt="Telepad gui1">
             </div>
 
         </div>
