--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </li>
                     <li><a href="https://github.com/GamingLounge-me/telepads" target="_blank">Telepad</a></li>
                 </ul>
-                <button><a href="minecraft/endless.html">more information</a></button>
+                <button><a href="minecraft/endless/">more information</a></button>
                 <button><a href="https://map.gaminglounge.me/minecraft/endless/" target="_blank">Map</a></button>
     </div>
 
