fix alien arcadium

--- a/minecraft/hypixel/arcade/zombies/index.html
+++ b/minecraft/hypixel/arcade/zombies/index.html
@@ -44,7 +44,7 @@
 
         <div class="full-block right minecraft-hypixel-zombies-alien_arcadium">
             <h1 style="height: 250px;"><a name="alien_arcadium" href="#alien_arcadium" style="text-decoration: none;">Alien Arcadium</a></h1>
-            <button><a href="alien_arcadium.html">more information</a></button>
+            <button><a href="/alien_arcadium/">more information</a></button>
         </div>
 
 
