fix back buttons

--- a/minecraft/hypixel/arcade/zombies/alien_arcadium/index.html
+++ b/minecraft/hypixel/arcade/zombies/alien_arcadium/index.html
@@ -19,8 +19,8 @@
                     style="color: #ff6600">L</span><span style="color: #ff7700">o</span><span
                     style="color: #ff8800">u</span><span style="color: #ff9900">n</span><span
                     style="color: #ffaa00">g</span><span style="color: #ffbb00">e</span>
-            <a class="cta" href="/#alien_arcadium">Back</a>
-            <a class="menu cta" href="/#alien_arcadium">Back</a>
+            <a class="cta" href="../#alien_arcadium">Back</a>
+            <a class="menu cta" href="../#alien_arcadium">Back</a>
         </header>
 
         <div class="blocksite">
